syntax = "proto3";

option csharp_namespace = "TaxServiceGrpc.Protos";

package TaxServiceGrpc;

service ITaxService {
    rpc TaxTransaction (TaxRequest) returns (TaxReceipt);
}

message TaxRequest {
    int32 Amount = 1;
}

message TaxReceipt {
    int32 Amount = 1;
    int32 TaxPaid = 2;
}